$Id: History,v 1.57 2000-01-11 17:24:18 johna Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     *************************************************************
     * Note that modeling and test have their own History files. *
     *************************************************************

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

History file for visualization category
---------------------------------------

vis-V01-00-02  11th January 2000  John Allison
- General handling of displaced solid (G4PhysicalVolumeModel).
- Introduced /vis/viewer/show (/vis/viewer/update is synonym).
- Improved printing in /vis/camera/reset.

vis-V01-00-01  27th December 1999  Satoshi Tanaka
- VRML-V01-00-00 27th December 1999  Satoshi Tanaka
- G4endl ==> "\n" for fDest objects ... for ISO standard C++ compiler

vis-V01-00-00  16th December 1999  John Allison
- (Note: NOT FOR SYSTEM TESTING - this tag still has problems with
   displaying logical volumes and text.)
- Added /vis/viewer/refresh.
- Rationalised command lists for keeping parameter lists up to date,
  G4VVisCommand::sceneNameCommands, etc.
- Added AddThis(const G4Polycone&), etc., to prevent hiding warnings.
- Developments in test - see test/History.

vis-V00-01-14a  7th December 1999  John Allison