@@ -1,4 +1,4 @@
-$Id: History,v 1.57 2000-01-11 17:24:18 johna Exp $
+$Id: History,v 1.58 2000-01-14 15:30:10 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -23,6 +23,9 @@ committal in the CVS repository !
 
 History file for visualization category
 ---------------------------------------
+
+14th January 2000  John Allison
+- Added protection for no viewer in G4VisCommandsViewer.cc.
 
 vis-V01-00-02  11th January 2000  John Allison
 - General handling of displaced solid (G4PhysicalVolumeModel).
